# Kinova-arm-control

./: CMakeLists.txt  README.md  initial_setup.sh
examples/: CMakeLists.txt
examples/rsc/kinova/meshes/: cup.stl
examples/rsc/kinova/urdf/: cup.urdf  kinova.urdf  newtable.urdf  treshcan.urdf
examples/src/: canine.cpp  kinova.cpp
tools/include/: baseController.hpp  jointController.hpp  robotController.hpp  setTime.hpp
tools/include/Control/: Control.hpp  robotController.hpp
tools/include/Others/: setObstacle.hpp
tools/include/Planning/: cubicTrajectoryGenerator.hpp
tools/src/: baseController.cpp  jointController.cpp  robotController.cpp  setTime.cpp
tools/src/Control/: Control.cpp  robotController.cpp
tools/src/Others/: setObstacle.cpp  setTime.cpp
tools/src/Planning/: cubicTrajectoryGenerator.cpp
